data/derived/comb/progs/unify/prog0414.ml.out
Characters 8-15:
  let _ = clone 2 -1;;
          ^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
